Fixed add button to align with input

--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -17,6 +17,7 @@ input {
 }
 
 .button {
+  margin-bottom: 18px;
   background-color: #fff;
   border: 1px solid #d5d9d9;
   border-radius: 8px;
